# claude-session-debrief

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: debrief.md
plugins/claude-session-debrief/: pyproject.toml
plugins/claude-session-debrief/session_debrief/: locator.py
plugins/claude-session-debrief/tests/: test_debrief.py
plugins/debrief/: LICENSE
plugins/debrief/commands/: debrief.md
plugins/debrief/session_debrief/: __main__.py
plugins/debrief/tests/fixtures/: truncated.jsonl
session_debrief/: __init__.py  __main__.py  heuristics.py  multi.py  parser.py  renderer.py
tests/: test_locator_multi.py
tests/fixtures/: errored.jsonl  meta_only.jsonl  rejected.jsonl  tight.jsonl  wandering.jsonl
